--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,21 @@
             <version>1.18.32</version> <!-- Phiên bản mới nhất -->
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.2.4</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
